# deploy-sc-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config  deploy-sc  script.md
.github/workflows/: ci.yml  release.yml
plans/: git-pull-conflict-optimization.md  k8s-deploy-implementation.md
scripts/: deploy.sh
src/: build.rs  cli.rs  config.rs  context.rs  detect.rs  docker.rs  error.rs  git.rs  k8s.rs  lib.rs  main.rs  process.rs  ui.rs  workflow.rs
